Add completed Day 1 assignment: implemented initial CPU constructor, run() method, ram_read() and ram_write() methods, and instructions (HLT, LDI, PRN).

--- a/scratch_work.ipynb
+++ b/scratch_work.ipynb
@@ -10,21 +10,260 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": 3
+   "version": "3.7.6-final"
   },
-  "orig_nbformat": 2
+  "orig_nbformat": 2,
+  "kernelspec": {
+   "name": "python_defaultSpec_1598042642930",
+   "display_name": "Python 3.7.6 64-bit ('anaconda3': virtualenv)"
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2,
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "# "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "Number is 1\n"
+    }
+   ],
+   "source": [
+    "num = 0b11011 & 0b1101\n",
+    "print(f\"Number is {0b11011 & 0b101:b}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "SUB = 0b10100001\n",
+    "instruction = SUB"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "('0b10100001', 161)"
+     },
+     "metadata": {},
+     "execution_count": 62
+    }
+   ],
+   "source": [
+    "bin(instruction), instruction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "int"
+     },
+     "metadata": {},
+     "execution_count": 63
+    }
+   ],
+   "source": [
+    "type(instruction)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "2"
+     },
+     "metadata": {},
+     "execution_count": 73
+    }
+   ],
+   "source": [
+    "op_size = instruction >> 6\n",
+    "op_size"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "instruction is an ALU operation\n"
+    }
+   ],
+   "source": [
+    "if (instruction >> 4) & 0b0001: # if int(bin(instruction >> 4)[-1]):\n",
+    "    print(\"instruction sets the PC\")\n",
+    "if instruction >> 5 & 0b001:  # if int(bin(instruction >> 4)[-2]):\n",
+    "    print(\"instruction is an ALU operation\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "0\n"
+    }
+   ],
+   "source": [
+    "print(int(bin(instruction >> 5)[-1]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "0"
+     },
+     "metadata": {},
+     "execution_count": 71
+    }
+   ],
+   "source": [
+    "(instruction >> 4) & 0b0001"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "1"
+     },
+     "metadata": {},
+     "execution_count": 70
+    }
+   ],
+   "source": [
+    "instruction >> 5 & 0b001"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "'0b101'"
+     },
+     "metadata": {},
+     "execution_count": 86
+    }
+   ],
+   "source": [
+    "bin(0b10000101 & 0b00000111)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "'b'"
+     },
+     "metadata": {},
+     "execution_count": 79
+    }
+   ],
+   "source": [
+    "operand_b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "'a'"
+     },
+     "metadata": {},
+     "execution_count": 76
+    }
+   ],
+   "source": [
+    "b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "'b'"
+     },
+     "metadata": {},
+     "execution_count": 77
+    }
+   ],
+   "source": [
+    "c"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ]
 }
