Add completed Day 2 assignment: load memory via specified file, MULT operation.

--- a/ls8/scratch_work.ipynb
+++ b/ls8/scratch_work.ipynb
@@ -260,6 +260,212 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "False"
+     },
+     "metadata": {},
+     "execution_count": 112
+    }
+   ],
+   "source": [
+    "ram = [0] * 256\n",
+    "ram.append(2)\n",
+    "sum(ram) == 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "False"
+     },
+     "metadata": {},
+     "execution_count": 113
+    }
+   ],
+   "source": [
+    "len(list(filter(lambda x: x != 0, ram))) == 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "False"
+     },
+     "metadata": {},
+     "execution_count": 114
+    }
+   ],
+   "source": [
+    "all(element == 0 for element in ram)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "False"
+     },
+     "metadata": {},
+     "execution_count": 115
+    }
+   ],
+   "source": [
+    "all([element == 0 for element in ram])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "instruction = 0b10000010"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "3"
+     },
+     "metadata": {},
+     "execution_count": 129
+    }
+   ],
+   "source": [
+    "(instruction >> 6) + 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "'0b10'"
+     },
+     "metadata": {},
+     "execution_count": 125
+    }
+   ],
+   "source": [
+    "bin(instruction >> 6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "op_size = (instruction >> 6) + 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "instruction = \"10000010\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 145,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "130"
+     },
+     "metadata": {},
+     "execution_count": 145
+    }
+   ],
+   "source": [
+    "inst = int(instruction, base=2)\n",
+    "inst"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 146,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "'0b10000010'"
+     },
+     "metadata": {},
+     "execution_count": 146
+    }
+   ],
+   "source": [
+    "bin(inst)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "'0b10'"
+     },
+     "metadata": {},
+     "execution_count": 147
+    }
+   ],
+   "source": [
+    "bin(inst >> 6)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
